# phone-and-mail-verifier

./: LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: workflow.yml
email_phone_validator/: __init__.py  email.py  phone.py  validator.py
tests/: __init__.py  test_email.py  test_phone.py
