[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phone-and-mail-verifier"
version = "0.1.2"
description = "Production-ready Python library for email and phone number validation. Validate emails and phone numbers with support for multiple countries. Built by Skyweb IT Solutions Private Limited."
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Skyweb IT Solutions Private Limited", email = "official@skywebdev.xyz"},
]
keywords = ["email", "phone", "validation", "validator", "phonenumber", "email-validator", "phone-validator", "email-validation", "phone-validation", "contact-validation", "form-validation", "data-validation", "python", "skyweb", "it-solutions"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "phonenumbers>=8.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://www.skywebdev.xyz"
Documentation = "https://github.com/Skywebsite/phone-and-mail-verifier"
Repository = "https://github.com/Skywebsite/phone-and-mail-verifier"
Issues = "https://github.com/Skywebsite/phone-and-mail-verifier/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

